@@ -1,7 +1,7 @@
 
 # The R Commander and command logger
 
-# last modified 2017-01-23 by John Fox
+# last modified 2017-02-01 by John Fox
 
 # contributions by Milan Bouchet-Valat, Richard Heiberger, Duncan Murdoch, Erich Neuwirth, Brian Ripley
 
@@ -26,7 +26,10 @@ Commander <- function(){
     platformIssues()
     
     modelClasses <- scan(file.path(getRcmdr("etc"), "model-classes.txt"), what="", quiet=TRUE, comment.char="#") # default recognized models
+    
     Plugins <- processPlugins(modelClasses)
+    
+    processModelCapabilities(Plugins)
     
     Menus <- processMenus(Plugins)
     
@@ -342,6 +345,28 @@ processPlugins <- function(modelClasses){
     putRcmdr("modelClasses", modelClasses)
     Plugins
 }
+
+
+processModelCapabilities <- function(Plugins){
+    modelCapabilities <- read.table(file.path(getRcmdr("etc"), "model-capabilities.txt"), header=TRUE)
+    n.plugins <- length(Plugins)
+    if (n.plugins > 0){
+        modelCapabilitiesList <- vector(n.plugins + 1, mode="list")
+        modelCapabilitiesList[[1]] <- modelCapabilities
+        for (i in 1:n.plugins){
+            modelCapabilitiesList[[i + 1]] <- read.table(file.path(path.package(package=Plugins[i])[1], 
+                                                                   "etc/model-capabilities.txt"),
+                                                         header=TRUE)
+        }
+        modelCapabilities <- mergeCapabilities(modelCapabilitiesList)
+    }
+    putRcmdr("modelCapabilities", modelCapabilities)
+    modelClasses <- getRcmdr("modelClasses")
+    modelCapabilitiesClasses <- rownames(modelCapabilities)
+    modelClasses <- union(modelClasses, modelCapabilitiesClasses)
+    putRcmdr("modelClasses", modelClasses)
+}
+
 
 processMenus <- function(Plugins){
     current <- getOption("Rcmdr")
@@ -1464,3 +1489,35 @@ popCommand <- function(keep=FALSE){
     if (!keep) putRcmdr("commandStack", c(stack[-1], NA))
     lastCommand
 }
+
+# handle model capabilities
+
+mergeCapabilities <- function(allCapabilities){
+    allrows <- unlist(lapply(allCapabilities, rownames))
+    if (length(allrows) > length(unique(allrows))) 
+        stop(gettextRcmdr("redundant model class or classes in plug-in package model capabilities table"))
+    capabilities <- lapply(allCapabilities, names)
+    all <- unique(unlist(capabilities))
+    for (i in 1:length(allCapabilities)) allCapabilities[[i]][, setdiff(all, capabilities[[i]])] <- FALSE
+    do.call(rbind, allCapabilities)
+}
+
+    # this function is exported:
+
+modelCapability <- function(capability){  
+    modelCapabilities <- getRcmdr("modelCapabilities")
+    model <- ActiveModel()
+    if (is.null(model)) return(FALSE)
+    class <- class(get(model, envir=.GlobalEnv))[1]
+    result <- modelCapabilities[class, capability]
+    if (is.null(result)) {
+        warning(paste(gettextRcmdr("no such model capability:"), capability,
+                      "\nreport problem to plug-in package author"))
+        return(FALSE)
+    }
+    if (is.na(result)) result <- modelCapabilities["default", capability]
+    if (is.na(result)) result <- FALSE
+    if (!is.logical(result)) stop(gettextRcmdr("non-logical value in model capabilities table"))
+    result
+}
+
